[package]
name = "indexer"
version = "0.1.0"
authors = ["EnormousCloud <enormous@webcerebrium.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx = { version = "0.4.1", features = [ "postgres", "runtime-async-std-rustls" ] }
async-std = { version = "1.6", features = [ "attributes" ] }
structopt = { version = "0.3", default-features = false }
serde = { version = "1.0", features = ["derive"] }
