[package]
name = "objstorage"
version = "0.1.0"
authors = ["EnormousCloud <enormous@webcerebrium.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
rusoto_core = { version = "0.46.0" }
rusoto_s3 = { version = "0.46.0" }