[package]
name = "bitcoin-explorer"
version = "0.1.0"
authors = ["EnormousCloud"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0" }
async-std = { version = "1.6", features = [ "attributes" ] }
async-trait = { version = "0.1" }
base64 = { version = "0.13" }
cached = { version = "0.23" }
clap = { version = "2.33", default-features = false }
num-format = { version = "0.4" }
bitcoincore-rpc = { version = "0.13" }
bitcoincore-rpc-json = { version = "0.13" }
sauron = { git = "https://github.com/ivanceras/sauron", branch = "master" }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
sqlx = { version = "0.4", features = [ "postgres", "runtime-async-std-rustls" ] }
structopt = { version = "0.3", default-features = false }
tide = { version = "0.16", default-features = false, features = ["h1-server"] }
tracing = { version = "0.1" }
tracing-futures =  { version = "0.2" }
tracing-subscriber = { version = "0.2" }
ureq = { version = "2.1", features = ["json", "charset"] }